--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "latest",
     "next-mdx-remote": "^4.1.0",
     "next-remote-watch": "1.0.0",
+    "node": "^22.9.0",
     "prismjs": "^1.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
